# timberAllocation

./: .gitignore  ReadMe.md  setup.cfg
tests/: 47,31->51,22,5.dot  47,31->51,22,5.tsv  toy.tsv  wood.tsv  wood1.tsv
timberAllocation/: __init__.py  __main__.py  middleRepr.py  sortSolution.py  stateGraph.py  vis.py  z3Solution.py
timberAllocation/utils/: __init__.py  z3Numpy.py
