[metadata]
name = timberAllocation
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/timberAllocation.py
description = Just a tool trying to solve the task of optimal cutting existing pieces of timber into pieces that when combined give pieces of needed length
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = algorythms, greedy, divide-and-conquer, dynamic programming, optimization
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
install_requires = 
	RichConsole @ git+https://gitlab.com/KOLANICH/RichConsole.py.git

[options.extras_requires]
optimization = autograd
